(Format: Year/Month/Day)
Changes for 0.9.15:
*05/11/13:
   * Fixed #1307877 fbsetbg did not create ~/.fluxbox/lastwallpaper 
     (Henrik)
     fbsetbg
*05/10/23:
   * Fixed #1335255 (Gentoo #110197) fbgm had some globbing related probs (thanx t35t0r)
     fluxbox-generate_menu.in
*05/10/21:
   * Fixed #1223878, Style reloading on USR2 (thanx Zan)
     Screen.cc
*05/10/20:
   * Fixed bug #1327878. (Henrik)
     Appending backslash to () and [] characters in the apps file
     ClientPattern.cc, FbTk/StringUtil.hh/cc
*05/10/19:
   * Fixed reordering of tabs (thanx Rob Stevens)
     Window.cc FbWinFrame.hh FbWinFrame.cc
*05/10/12:
   * Small changes, coming from fbsd-ports (thanx Jeremy Messenger <mezz at FreeBSD dot org>)
     util/fluxbox-generate_menu.in util/startfluxbox.in
*05/10/04:
   * Avoid drawing the resize outline if not really resizing (Mathias)
     Window.cc
*05/09/25:
   * added nls for "-screen" argument (Thanks php-coder)
     nls/*/Translation.m, nls/fluxbox-nls.hh
*05/09/13:
   * Fixes #1267076, cygwin link problems (Mathias)
     src/ScreenResources.cc
   * Use fbsetroot in Default-Styles (Mathias)
     data/styles/*
-------------------------------------------------------------
Changes for 0.9.14:
*05/09/12:
   * Fixes #1281708, MenuIcon doesnt scale properly (thanx Erik-Jan)
     src/WinButtonTheme.cc
*05/09/08:
   * Fixed bug in client menu. Window menu did not open. (Henrik)
      FbTk/Menu.cc
   * Add titlebar scrolling options (thanks Krzysiek Pawlik <krzysiek.pawlik__AT__people.pl>)
     New init options:
       session.screenN.windowScrollAction: Shade|NextTab
       - set the action that happens when scrolling on the titlebar
       session.screenN.windowScrollReverse: true|false
       - reverse the action direction
     Screen.hh/cc Window.hh/cc
*05/09/04:
   * Added Feature Request #1084510 (Mathias)
     When Mod1 + LeftMouse are clicked on a Window and the mouse is not
     moved, the window is raised at LeftMouseRelease